syntax = "proto2";

package client;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/pkg/client/config";

////////////////////////////////////////////////////////////////////////////////

message Config {
    required string Endpoint = 1;
    optional uint32 MaxRetryAttempts = 2 [default = 1000];
    optional string PerRetryTimeout = 3 [default = "5s"];
    optional string BackoffTimeout = 4 [default = "1s"];
    optional string OperationPollPeriod = 5 [default = "1s"];
}
